# fricon

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .rules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE-2.0  README.md  buf.yaml  build.rs  clippy.toml  deny.toml  design.md  eslint.config.js  eslint.config.ts  knope.toml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  release-plz.toml  renovate.json  requirements.md  rustfmt.toml  tasks.md  tsconfig.json  tsconfig.node.json
crates/fricon/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/fricon-cli/: Cargo.toml
crates/fricon-cli/src/: cli.rs  commands.rs  lib.rs  main.rs
crates/fricon-cli/src/cli/: help.rs  parse.rs  types.rs
crates/fricon-cli/src/commands/: gui.rs  init.rs
crates/fricon-py/: AGENTS.md  Cargo.toml
crates/fricon-py/python/: ruff.toml
crates/fricon-py/python/fricon/: __init__.py  _core.pyi  _helper.py
crates/fricon-py/src/: cli.rs  conversion.rs  convert.rs  dataset.rs  lib.rs  py_api.rs  runtime.rs  trace.rs  types.rs  workspace.rs  writer.rs
crates/fricon-py/src/convert/: pandas.rs  py_to_rust.rs  rust_to_py.rs
crates/fricon-py/src/py_api/: app.rs  dataset.rs  dataset_catalog.rs  module.rs  trace.rs  workspace.rs  writer.rs
crates/fricon-py/src/runtime/: errors.rs  tokio.rs
crates/fricon-py/tests/: import_test.py  ruff.toml  test_trace_creation.py
crates/fricon-py/tests/integration/: conftest.py  test_dataset_operations.py  test_workspace.py
crates/fricon-ui/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
crates/fricon-ui/frontend/: .dependency-cruiser.cjs  AGENTS.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
crates/fricon-ui/frontend-vue/: index.html  vite.config.ts
crates/fricon-ui/frontend-vue/src/: DataViewer.vue  DatasetDetailPage.vue  DatasetTable.vue
crates/fricon-ui/frontend/src/: App.vue  AppCredits.vue  AppFolderPicker.vue  ChartViewer.vue  DataViewer.vue  DatasetDetailPage.vue  DatasetTable.vue  PlotConfigViewer.vue  backend.ts  index.css  main.ts  main.tsx  routeTree.gen.ts  router.ts  style.css
crates/fricon-ui/icons/: icon.icns
crates/fricon-ui/src/: api.rs  app_state.rs  application.rs  chart_config.rs  chart_data.rs  chart_service.rs  commands.rs  dataset_browser.rs  desktop_runtime.rs  features.rs  filter_data.rs  launch.rs  lib.rs  logging.rs  main.rs  models.rs  panic_hook.rs  runtime.rs  tauri_api.rs  workspace.rs  workspace_session.rs
crates/fricon-ui/src/api/: charts.rs  datasets.rs  workspace.rs
crates/fricon-ui/src/application/: chart_data.rs  charts.rs  datasets.rs  session.rs  workspace.rs
crates/fricon-ui/src/chart_data/: heatmap.rs  line.rs  mapping.rs  scatter.rs  types.rs
crates/fricon-ui/src/commands/: chart.rs  chart_selection.rs  dataset.rs  filter_data.rs  tags.rs  types.rs
crates/fricon-ui/src/dataset_browser/: mapping.rs  mutations.rs  queries.rs  types.rs
crates/fricon-ui/src/desktop_runtime/: app_state.rs  event_forwarder.rs  runtime.rs  runtime_owner.rs  session.rs
crates/fricon-ui/src/features/: charts.rs  datasets.rs
crates/fricon-ui/src/filter_data/: types.rs
crates/fricon-ui/src/launch/: select_workspace.rs
crates/fricon-ui/src/models/: chart.rs  filter.rs  mod.rs
crates/fricon-ui/src/tauri_api/: bindings.rs  chart_data.rs  commands.rs  dataset.rs  events.rs  filter_table.rs
crates/fricon-ui/src/workspace_session/: service.rs  validation.rs
crates/fricon/.sqlx/: query-8e93447d2b97ead4fec70c9cb3f17169107a26d798a2d8bf30ffd3616385277c.json  query-97a3ad89ae6c642bfbcd9328e14d4d550b498a81a370fb7bcdd62ce2baba7757.json
crates/fricon/migrations/2025-08-13-084827_create_datasets/: down.sql  up.sql
crates/fricon/migrations/2026-03-21-000001_add_dataset_trash/: down.sql  up.sql
crates/fricon/migrations/2026-03-21-000002_add_dataset_deleted_at/: down.sql  up.sql
crates/fricon/migrations/2026-03-26-045119-0000_create_dataset_baseline/: up.sql
crates/fricon/src/: app.rs  background_writer.rs  chart.rs  chart_service.rs  client.rs  config.rs  configuration_service.rs  database.rs  dataset.rs  dataset_catalog.rs  dataset_fs.rs  dataset_ingest.rs  dataset_manager.rs  dataset_read.rs  dataset_schema.rs  dataset_tasks.rs  datatypes.rs  db.rs  ipc.rs  lib.rs  live.rs  multi_index.rs  paths.rs  plot_config.rs  proto.rs  reader.rs  runtime.rs  schema_utils.rs  server.rs  storage.rs  transport.rs  utils.rs  workspace.rs  write_registry.rs  write_session.rs
crates/fricon/src/app/: server.rs
crates/fricon/src/database/: core.rs  dataset.rs  models.rs  schema.rs  types.rs
crates/fricon/src/dataset/: arrays.rs  batch_writer.rs  catalog.rs  events.rs  ingest.rs  model.rs  portability.rs  read.rs  scalars.rs  schema.rs  sqlite.rs  storage.rs  table.rs  tag.rs  types.rs  utils.rs
crates/fricon/src/dataset_catalog/: db.rs  events.rs  query.rs  service.rs  tasks.rs  types.rs  update.rs
crates/fricon/src/dataset_fs/: reader.rs  writer.rs
crates/fricon/src/dataset_ingest/: registry.rs  service.rs  types.rs  (+3 more)
crates/fricon/tests/: integration_test.rs  schema_utils_integration.rs
fricon-py/: Cargo.toml
fricon-py/src/: cli.rs  lib.rs  workspace.rs
fricon-ui/: Cargo.toml  package.json  pnpm-lock.yaml  tauri.conf.json
fricon-ui/frontend/: index.html  package.json  pnpm-lock.yaml
fricon-ui/frontend/src/: App.vue  AppCredits.vue
fricon-ui/icons/: icon.icns
fricon-ui/src/: lib.rs
fricon-viewer/: .gitignore  Cargo.toml  package.json  tauri.conf.json
fricon-viewer/frontend/: pnpm-lock.yaml  vite.config.ts
fricon-viewer/src/: main.rs
python/: .gitignore  LICENSE.txt  README.md  hatch_build.py  mkdocs.yml  pyproject.toml
python/docs/: concepts.md  dataset.md
python/examples/: dataset.py
python/examples/dataset/: create.py  open.py
python/examples/simple/: create.py  open.py
python/src/fricon/: __init__.py  _core.pyi  _helper.py  _io.py
(+523 files in other folders)
