[workspace]
members = [
    "crates/fricon",
    "crates/fricon-py",
    "crates/fricon-ui",
    "crates/fricon-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0-alpha.1"
license = "MIT OR Apache-2.0"
description = "Data collection automation framework."
authors = ["Jiahao Yuan <kahojyun@icloud.com>"]
repository = "https://github.com/kahojyun/fricon"
keywords = ["experimental"]

[workspace.dependencies]
anyhow = "1.0.101"
arrow-arith = "57.3.0"
arrow-array = "57.3.0"
arrow-buffer = "57.3.0"
arrow-ipc = "57.3.0"
arrow-json = "57.3.0"
arrow-ord = "57.3.0"
arrow-schema = "57.3.0"
arrow-select = "57.3.0"
arrow-pyarrow = "57.3.0"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.43"
clap = "4.5.58"
derive_more = "2.1.1"
diesel = "2.3.6"
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hyper-util = "0.1.20"
indexmap = "2.13.0"
itertools = "0.14.0"
libsqlite3-sys = "0.35.0"
memmap2 = "0.9.9"
num = "0.4.3"
numpy = "0.26.0"
prost = "0.14.3"
prost-types = "0.14.3"
pyo3 = "0.26.0"
pyo3-async-runtimes = "0.26.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.149"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = "2.10.2"
tauri-build = "2.5.5"
tauri-plugin-opener = "2.5.3"
tauri-specta = "=2.0.0-rc.21"
tauri-utils = "2.8.2"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-prost-build = "0.14.3"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
uuid = "1.20.0"
mockall = "0.14.0"

[workspace.lints.rust]
rust-2018-idioms = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# allowed pedantic
missing_panics_doc = "allow"
missing_errors_doc = "allow"

# restriction
## style
absolute_paths = "warn"
mod_module_files = "warn"
unused_result_ok = "warn"
## quality
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
mem_forget = "warn"
unwrap_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
exit = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
