[workspace]
resolver = "3"
members = [
  "crates/fricon",
  "crates/fricon-cli",
  "crates/fricon-py",
  "crates/fricon-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Data collection automation framework."
repository = "https://github.com/kahojyun/fricon"
license = "MIT OR Apache-2.0"
keywords = ["experimental"]

[workspace.dependencies]
anyhow = "1.0.102"
arrow-arith = "58.1.0"
arrow-array = "58.1.0"
arrow-buffer = "58.1.0"
arrow-ipc = "58.1.0"
arrow-ord = "58.1.0"
arrow-pyarrow = "58.1.0"
arrow-schema = "58.1.0"
arrow-select = "58.1.0"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
clap = "4.6.0"
derive_more = "2.1.1"
diesel = "2.3.7"
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
futures = "0.3.32"
hyper-util = "0.1.20"
indexmap = "2.13.0"
itertools = "0.14.0"
libsqlite3-sys = "0.36.0"
memmap2 = "0.9.10"
mockall = "0.14.0"
num = "0.4.3"
numpy = "0.28.0"
prost = "0.14.3"
prost-types = "0.14.3"
pyo3 = "0.28.2"
pyo3-async-runtimes = "0.28.0"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
specta = "=2.0.0-rc.24"
specta-typescript = "=0.0.11"
tar = "0.4"
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin-opener = "2.5.3"
tauri-specta = "=2.0.0-rc.24"
tauri-utils = "2.8.3"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.50.0"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tower = "0.5.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.23"
uuid = "1.22.0"
zstd = "0.13"

[workspace.lints.clippy]
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
exit = "warn"
mem_forget = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
mod_module_files = "warn"
multiple_unsafe_ops_per_block = "warn"
pedantic = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unused_result_ok = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable_pub = "warn"
