[project]
name = "fricon"
readme = "README.md"
requires-python = ">=3.10"
license-files = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "THIRD_PARTY_NPM.md",
  "THIRD_PARTY_RUST.toml",
]
authors = [{ name = "Jiahao Yuan", email = "kahojyun@icloud.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dependencies = [
  "numpy>=1.19.3",
  "pandas>=2.2.3",
  "polars>=1.17.1",
  "pyarrow>=17.0.0",
]
dynamic = ["description", "keywords", "license", "version"]

[project.urls]
Documentation = "https://kahojyun.github.io/fricon/"
Issues = "https://github.com/kahojyun/fricon/issues"
Source = "https://github.com/kahojyun/fricon"

[project.scripts]
fricon = "fricon._core:main"

[project.gui-scripts]
fricon-gui = "fricon._core:main_gui"

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "ipython>=8.18.1",
  "packaging>=24.2",
  "pandas-stubs>=2.2.2.240807",
  "pyarrow-stubs>=17.6",
  "python-dotenv>=1.2.1",
]
ci = ["basedpyright>=1.23.2", "mypy>=1.11.2", "pytest>=9.0.0"]
docs = [
  "black>=24.10.0",
  "markdown-exec[ansi]>=1.10.0",
  "maturin>=1.8,<2.0",
  "mike>=2.1.3",
  "mkdocs-material>=9.5.49",
  "mkdocstrings-python>=1.12.2",
]
fmt = ["ruff>=0.6.6"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.basedpyright]
include = ["crates/fricon-py/python", "examples", "crates/fricon-py/tests"]

[[tool.basedpyright.executionEnvironments]]
root = "crates/fricon-py/python"
pythonVersion = "3.10"

[tool.maturin]
features = ["dist"]
include = [
  { format = "sdist", path = "package.json" },
  { format = "sdist", path = "pnpm-workspace.yaml" },
  { format = "sdist", path = "pnpm-lock.yaml" },
  { format = "sdist", path = "tsconfig.node.json" },
  { format = "sdist", path = "eslint.config.ts" },
]
manifest-path = "crates/fricon-py/Cargo.toml"
module-name = "fricon._core"
no-default-features = true
python-source = "crates/fricon-py/python"

[tool.pytest]
addopts = ["--import-mode=importlib"]
minversion = "9.0"
testpaths = ["crates/fricon-py/tests"]

[tool.uv]
config-settings = { build-args = "--profile=dev" }
default-groups = ["dev", "fmt", "ci", "docs"]
exclude-newer = "3 days"
