[package]
name = "fricon-py"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
doctest = false

[dependencies]
fricon = { path = ".." }
pyo3 = "0.23.2"
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }
tokio = { version = "1.42.0", features = ["sync"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"

[lints]
workspace = true
