[package]
name = "fricon-py"
version = "0.1.0"
edition = "2021"
publish = false
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
doctest = false

[dependencies]
fricon = { path = ".." }

clap.workspace = true
pyo3 = { workspace = true, features = ["anyhow", "chrono"] }
pyo3-async-runtimes.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
arrow = { workspace = true, features = ["pyarrow"] }
anyhow.workspace = true
chrono.workspace = true

[lints]
workspace = true
