[package]
name = "fricon-cli"
publish = false
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "fricon"
path = "src/main.rs"
doc = false

[dependencies]
fricon = { path = "../fricon" }
fricon-ui = { path = "../fricon-ui" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[features]
prod = ["fricon-ui/prod"]
