[package]
name = "fricon-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish = false

[[bin]]
doc = false
name = "fricon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fricon = { path = "../fricon" }
fricon-ui = { path = "../fricon-ui" }
tracing-subscriber = { workspace = true }

[features]
prod = ["fricon-ui/prod"]

[lints]
workspace = true
