[package]
name = "fricon-py"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-pyarrow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fricon = { path = "../fricon" }
fricon-cli = { path = "../fricon-cli" }
indexmap = { workspace = true }
itertools = { workspace = true }
num = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = [
  "abi3-py310",
  "anyhow",
  "chrono",
  "generate-import-lib",
  "indexmap",
  "num-complex",
] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }

[features]
prod = ["fricon-cli/prod"]

[lints]
workspace = true
