[package]
name = "fricon-ui"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish = false
default-run = "fricon-ui"

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
fricon = { path = "../fricon" }
indexmap = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["chrono", "derive"] }
specta-typescript = { workspace = true }
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-opener = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[dev-dependencies]
num = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
tauri-utils = { workspace = true }

[features]
prod = ["tauri/custom-protocol"]

[lints]
workspace = true
