[package]
name = "fricon"
rust-version = "1.89"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-ipc = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["from"] }
diesel = { workspace = true, features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
] }
diesel_migrations = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true }
itertools = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }
memmap2 = { workspace = true }
num = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
indexmap = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
